--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(mico_octomap)
+project(mico_obstacle_avoidance)
 
 set(CMAKE_CXX_FLAGS "--std=c++0x")
 
